--- a/NfcNDEFReader/AndroidManifest.xml
+++ b/NfcNDEFReader/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="fr.oversimple.nfc.urlReader.MainActivity"
+            android:name="fr.oversimple.nfc.ndefReader.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
